# pkg-monitoring-plugins

./: .travis.yml  ChangeLog  Makefile.am  Makefile.in  NPTest.pm  THANKS  aclocal.m4  command.cfg.in  config.h.in  configure  configure.ac  configure.in  monitoring-plugins.spec  nagios-plugins.spec  release  test.pl.in
contrib/: check_adptraid.sh  check_apc_ups.pl  check_appletalk.pl  check_arping.pl  check_axis.sh  check_email_loop.pl  check_fan_cpq_present  check_fan_fsc_present  check_frontpage  check_ftpget.pl  check_http-with-client-certificate.c  check_hw.sh  check_ica_master_browser.pl  check_ica_metaframe_pub_apps.pl  check_ica_program_neigbourhood.pl  check_inodes-freebsd.pl  check_javaproc.pl  check_joy.sh  check_log2.pl  check_logins.c  check_lotus.pl  check_mem.pl  check_ms_spooler.pl  check_mysqlslave.pl  check_ora_table_space.pl  check_oracle_instance.pl  check_oracle_tbs  check_pfstate  check_procl.sh  check_rbl.c  check_smb.sh  check_snmp_disk_monitor.pl  check_snmp_printer.pl  check_snmp_process_monitor.pl  check_snmp_procs.pl  check_sybase  check_temp_cpq  check_temp_fsc  check_traceroute.pl  check_uptime.c  (+4 more)
debian/: .gitlab-ci.yml  NEWS  NEWS.Debian  README.Debian  README.Debian.plugins  README.Debian.plugins.in  README.source  changelog  control  copyright  docs  functions  gbp.conf  monitoring-plugins-basic.alternatives  monitoring-plugins-basic.dirs  monitoring-plugins-basic.links  monitoring-plugins-basic.postinst  monitoring-plugins-basic.postrm.in  monitoring-plugins-common.docs  monitoring-plugins-common.links  monitoring-plugins-standard.dirs  monitoring-plugins-standard.links  monitoring-plugins-standard.postinst  postinst  (+15 more)
m4/: Makefile.am  Makefile.in
(+364 files in other folders)
